# ddns-by-dnspod

./: .gitignore  LICENSE  README.md  certbot_auth.py  cli.py  config.example.yaml  db.py  ddns.py  dnspod.py  dnspod_api_example.py  dnspod_cli.py  example.yaml  ip.yaml  iptools.py  pyproject.toml  requirements.txt  utils.py
ddns_by_dnspod/: __init__.py  cli.py  config.py  db.py  ddns.py  notify.py
sql/: table_ddns_record.sql  table_dnspod_auth.sql  table_dnspod_domain.sql  table_dnspod_record.sql  table_dnspod_record_group.sql
